# nanideshiko-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  keys_example.py  nanideshiko.py  pyproject.toml
.github/workflows/: ci.yml
extensions/: alldebrid.py  bot_management.py  custom_reactions.py  greets.py  music.py  reaction_roles.py  sns.py  status.py  utilities.py
nanideshiko/: __main__.py
nanideshiko/config/: settings_example.py
nanideshiko/extensions/: __init__.py  bot_management.py  custom_reactions.py  greets.py  music.py  reaction_roles.py  rss.py  status.py  utilities.py
nanideshiko/utils/: saves.py
